change subgenus ke

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 data/
 .Rproj.user
+.Renviron
+outputs/
+callbacks/
+wc2.1_10m
+wc10/
+.Rproj
+dataset.keras
+*.zip
+.Rhistory
+.RDataTmp
+.RData
+.ipynb_checkpoints
